--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
   "dependencies": {
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
+    "co-body": "^4.0.0",
+    "co-views": "^2.1.0",
     "commander": "^2.9.0",
+    "ejs": "^2.3.4",
     "koa": "^1.1.2",
+    "koa-body": "^1.3.0",
+    "koa-body-parser": "^1.1.2",
+    "koa-json": "^1.1.1",
     "koa-json-body": "^4.0.0",
+    "koa-route": "^2.4.2",
+    "koa-router": "^5.3.0",
+    "koa-static": "^1.5.2",
     "longjohn": "^0.2.11",
+    "lru-cache": "^3.2.0",
     "moment": "^2.10.6",
     "request": "^2.67.0",
     "sqlite3": "^3.1.1",
