--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "timeline for sites",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Letian",
   "license": "MIT",
@@ -25,5 +25,8 @@
     "request": "^2.67.0",
     "sqlite3": "^3.1.1",
     "underscore": "^1.8.3"
+  },
+  "engines": {
+    "node": ">= 4.2.0"
   }
 }
