--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "sqlite3": "^3.1.1",
     "underscore": "^1.8.3"
   },
+  "devDependencies": {
+    "mocha": "^2.2.5"
+  },
   "engines": {
     "node": ">= 4.2.0"
   }
